--- a/pom.xml
+++ b/pom.xml
@@ -70,14 +70,17 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
-                  <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.2.0</version>
-            <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
-            </configuration>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>3.2.0</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+            <outputDirectory>${project.basedir}</outputDirectory>
+            <reportOutputDirectory>${project.basedir}</reportOutputDirectory>
+            <destDir>docs</destDir>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
